Fixes and scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,14 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@utility cursor-ew-resize {
+  cursor: ew-resize;
+}
+
+@utility cursor-col-resize {
+  cursor: col-resize;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
